<resources>
    <string name="app_name">Binaryveda</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="me_as_a_collector">me as a collector</string>
    <string name="register">register</string>
    <string name="track_my_application">track my application</string>
    <string name="lorem_ipsum_is_used">lorem ipsum \nis used</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</string>
    <string name="about_us">About Us. \n\nTeam. \n\nReach us.</string>
    <string name="affiliattions">Affiliattions. \n\nDisclaimers. \n\nPrivacy Policy.</string>
    <string name="content_copyright_reserved">Content Copyright reserved.</string>
    <string name="upload">Upload</string>
    <string name="john_doe">john.doe</string>
    <string name="edit">Edit</string>
    <string name="my_dashboard">My dashboard</string>
    <string name="_2_3k">2.3K</string>
    <string name="followers">Followers</string>
    <string name="_50">50</string>
    <string name="artworks">Artworks</string>
    <string name="_21">21</string>
    <string name="_120">120</string>
    <string name="_43k">43K</string>
    <string name="uploads">Uploads</string>
    <string name="revenue">Revenue</string>
    <string name="exhibitions">Exhibitions</string>
</resources>