<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="85.5dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="265dp"
            android:background="@drawable/ic_main_image1" />

        <ImageView
            android:layout_width="17dp"
            android:layout_height="13dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ic_main_image4" />

        <ImageView
            android:layout_width="16.8dp"
            android:layout_height="16.8dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="31.7dp"
            android:layout_marginEnd="79.1dp"
            android:background="@drawable/ic_main_image3" />
        <RelativeLayout
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="142dp">
            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:background="@drawable/ic_circle" />
            <ImageView
                android:layout_width="18dp"
                android:layout_height="19dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_main_image2" />
        </RelativeLayout>

        <ImageView
            android:layout_width="28dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="124dp"
            android:background="@drawable/ic_main_image5" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="157dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:gravity="center_horizontal"
            android:text="@string/upload"
            android:textColor="@color/blue_light"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="123dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="125dp"
            android:background="@drawable/ic_main_image7" />

        <TextView
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="222dp"
            android:layout_marginEnd="58dp"
            android:fontFamily="@font/barlow_condensed_extra_light"
            android:gravity="center|top"
            android:text="@string/john_doe"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <ImageView
            android:layout_width="27dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="291dp"
            android:layout_marginTop="129dp"
            android:layout_marginEnd="57dp"
            android:background="@drawable/ic_main_image6" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="265dp"
            android:layout_marginTop="157dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:gravity="center_horizontal"
            android:text="@string/edit"
            android:textColor="@color/blue_light"
            android:textSize="14sp" />

        <TextView
            android:layout_width="113dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="275dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:gravity="center"
            android:text="@string/my_dashboard"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="46dp"
            android:layout_height="17dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="299dp"
            android:layout_marginTop="279dp"
            android:layout_marginEnd="30dp"
            android:checked="true"
            android:gravity="center_vertical" />

        <View
            android:layout_width="332dp"
            android:layout_height="2dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="308dp"
            android:layout_marginEnd="23dp"
            android:background="@color/grey_light" />

        <TextView
            android:layout_width="75dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="319dp"
            android:layout_marginEnd="26dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:gravity="center"
            android:text="@string/_2_3k"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="57dp"
            android:layout_marginTop="344dp"
            android:layout_marginEnd="26dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <TextView
            android:layout_width="75dp"
            android:layout_height="29dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="147dp"
            android:layout_marginTop="319dp"
            android:layout_marginEnd="153dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:gravity="center_horizontal"
            android:text="@string/_50"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="164dp"
            android:layout_marginTop="344dp"
            android:layout_marginEnd="131dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:gravity="center_horizontal"
            android:text="@string/artworks"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="75dp"
            android:layout_height="29dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="243dp"
            android:layout_marginTop="319dp"
            android:layout_marginEnd="57dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:gravity="center"
            android:text="@string/_21"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="255dp"
            android:layout_marginTop="344dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="332dp"
            android:layout_height="2dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="379dp"
            android:layout_marginEnd="23dp"
            android:background="@color/grey_light" />
        
        <ImageView
            android:layout_width="19dp"
            android:layout_height="16dp"
            android:layout_marginTop="402dp"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="268dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_main_image13"/>
        <TextView
            android:layout_width="48dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="112dp"
            android:gravity="center_vertical"
            android:layout_marginTop="387dp"
            android:layout_marginEnd="215dp"
            android:fontFamily="@font/barlow_extra_light"
            android:text="@string/_120"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginTop="400dp"
            android:gravity="center_vertical|top"
            android:layout_marginStart="154dp"
            android:layout_marginEnd="205dp">
            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_main_image8"/>
            <TextView
                android:layout_width="48dp"
                android:layout_height="42dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/barlow_extra_light"
                android:text="@string/_43k"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="14dp"
            android:layout_height="16dp"
            android:layout_marginTop="401dp"
            android:layout_marginStart="220dp"
            android:layout_marginEnd="141dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_main_image9"/>

        <TextView
            android:layout_width="48dp"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="240dp"
            android:gravity="center_vertical"
            android:layout_marginTop="387dp"
            android:layout_marginEnd="87dp"
            android:fontFamily="@font/barlow_extra_light"
            android:text="@string/_2_3k"
            android:textColor="@color/black"
            android:textSize="18sp" />
        
        <ImageView
            android:layout_width="340dp"
            android:layout_height="42dp"
            android:layout_marginStart="17.8dp"
            android:layout_marginEnd="17.2dp"
            android:layout_marginTop="437dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/pallette"/>
        <ImageView
            android:layout_width="29dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="499dp"
            android:background="@drawable/ic_main_image10" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="536dp"
            android:fontFamily="@font/barlow_condensed_medium"
            android:text="@string/uploads"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <View
            android:layout_width="65dp"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="566dp"
            android:layout_marginEnd="23dp"
            android:background="@color/yellow" />

        <ImageView
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="169dp"
            android:layout_marginTop="503dp"
            android:layout_marginEnd="175dp"
            android:background="@drawable/ic_main_image11" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="149dp"
            android:layout_marginTop="536dp"
            android:layout_marginEnd="146dp"
            android:fontFamily="@font/barlow_condensed_medium"
            android:gravity="center|top"
            android:text="@string/exhibitions"
            android:textColor="@color/warm_grey"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="33dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="295dp"
            android:layout_marginTop="507dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_main_image12" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="284dp"
            android:layout_marginTop="536dp"
            android:layout_marginEnd="11dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:gravity="center_horizontal"
            android:text="@string/revenue"
            android:textColor="@color/warm_grey"
            android:textSize="14sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:padding="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="16.7dp"
            android:layout_marginTop="588dp"
            android:layout_marginBottom="2dp"
             />

    </RelativeLayout>

</ScrollView>